using System;

namespace POOI_Module09_PreparationCours.V1
{
    public class FormeGeometrique
    {
        public virtual void Dessiner()
        {
            // ???
            throw new NotImplementedException();
        }

        public virtual double CalculerAire()
        {
            // ???
            throw new NotImplementedException();
        }
    }
}